Bug 180851 - it is not possible to download a podcast immediately after you added the podcast
Summary: it is not possible to download a podcast immediately after you added the podcast
Status: RESOLVED FIXED
Alias: None
Product: amarok
Classification: Applications
Component: Podcast (other bugs)
Version First Reported In: 2.0.1
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Amarok Bugs
URL:
Keywords:
: 181474 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-15 18:43 UTC by andreaswuest
Modified: 2009-12-09 11:29 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description andreaswuest 2009-01-15 18:43:16 UTC
Version:           2.0.1 (using 4.1.3 (KDE 4.1.3), Kubuntu packages)
Compiler:          cc
OS:                Linux (x86_64) release 2.6.27-9-generic

hello,

if you add a podcast to you list of podcast it is not possible to download an episode using the context menu. nothing happens. after you restarted amarok downloading the podcast episodes is possible.
Comment 1 Bart Cerneels 2009-01-17 10:47:10 UTC
SVN commit 912298 by shanachie:

Simple fix for BR 180851.

Reload all podcasts once the PodcastReader has finished.

Will get a proper (tm) sollution in 2.1.

BUG:180851



 M  +52 -48    ChangeLog  
 M  +6 -3      src/podcasts/sql/SqlPodcastProvider.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=912298
Comment 2 Bart Cerneels 2009-01-17 18:07:21 UTC
SVN commit 912533 by shanachie:

Fix previous commit that fixed BR 180851.

It introduced race conditions by reloading the podcast channels to early. The end result was duplication of channels.

CCBUG:180851


 M  +11 -3     SqlPodcastProvider.cpp  
 M  +1 -0      SqlPodcastProvider.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=912533
Comment 3 Bart Cerneels 2009-01-21 20:21:49 UTC
*** Bug 181474 has been marked as a duplicate of this bug. ***