Simple fix for BR 180851.

Reload all podcasts once the PodcastReader has finished.

Will get a proper (tm) sollution in 2.1.

BUG:180851


svn path=/branches/stable/extragear-kde4/multimedia/amarok/; revision=912298